--- a/DeepLearning_with_process_mining.ipynb
+++ b/DeepLearning_with_process_mining.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1cG5ozxkoKIB5Ka2NtioqAJdqXWfjiLiS",
-      "authorship_tag": "ABX9TyOUe/RjWHbuZGvEC1jDXL9P",
+      "authorship_tag": "ABX9TyMvRmQMQjGFSNV03NBkpIf0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,10 +321,115 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The second stage of preprocessing the event log involves extracting the prefixes for each case"
+      ],
+      "metadata": {
+        "id": "nYQgAKuYm1rz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# extract the prefixes of each case in a an event log and create a new dataframe\n",
+        "import pandas as pd\n",
+        "\n",
+        "def extract_prefixes(event_log):\n",
+        "    \"\"\"\n",
+        "    Extracts prefixes of each case in an event log.\n",
+        "\n",
+        "    Args:\n",
+        "        event_log: DataFrame containing the event log.\n",
+        "            It should have columns for case ID and activity name.\n",
+        "\n",
+        "    Returns:\n",
+        "        DataFrame with prefixes for each case.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Assuming 'case_id' and 'activity' are column names for case ID and activity\n",
+        "    all_prefixes = []\n",
+        "    for case_id, group in event_log.groupby('caseid'):\n",
+        "        # Sort the group by start time\n",
+        "        group = group.sort_values(by='start')\n",
+        "        for i in range(1, len(group) + 1):\n",
+        "            prefix = group['activity'][:i].tolist()\n",
+        "            prefix_len = len(prefix)  # Calculate prefix length\n",
+        "            # Get the row corresponding to the current prefix\n",
+        "            prefix_row = group.iloc[i - 1].copy()\n",
+        "            # Add prefix and prefix_len as new columns\n",
+        "            prefix_row['prefix'] = prefix\n",
+        "            prefix_row['prefix_len'] = prefix_len\n",
+        "            all_prefixes.append(prefix_row)\n",
+        "\n",
+        "    return pd.DataFrame(all_prefixes)\n",
+        "\n",
+        "# Assuming 'df' is your event log DataFrame\n",
+        "prefix_df = extract_prefixes(df)\n",
+        "print(prefix_df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hmktWNYZmE4I",
+        "outputId": "6c861477-971e-400f-e022-12184d57ac9c"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       caseid activity    resource                   start  \\\n",
+            "69399       0   Task_8  Resource_4 2019-03-25 09:00:00.000   \n",
+            "69400       0   Task_1  Resource_5 2019-03-25 09:01:41.348   \n",
+            "69401       0   Task_2  Resource_2 2019-03-25 09:04:13.469   \n",
+            "69402       0   Task_3  Resource_2 2019-03-25 09:04:13.469   \n",
+            "69403       0   Task_4  Resource_2 2019-03-25 09:04:13.469   \n",
+            "...       ...      ...         ...                     ...   \n",
+            "48406    9999   Task_4  Resource_2 2019-05-31 20:45:20.381   \n",
+            "48407    9999   Task_9  Resource_4 2019-06-04 17:20:51.178   \n",
+            "48408    9999   Task_5  Resource_5 2019-06-05 13:52:33.049   \n",
+            "48409    9999   Task_6  Resource_3 2019-06-05 13:55:46.681   \n",
+            "48410    9999   Task_7  Resource_1 2019-06-05 15:44:52.696   \n",
+            "\n",
+            "                          end  \\\n",
+            "69399 2019-03-25 09:01:41.348   \n",
+            "69400 2019-03-25 09:04:13.469   \n",
+            "69401 2019-03-25 09:04:13.469   \n",
+            "69402 2019-03-25 09:04:13.469   \n",
+            "69403 2019-03-25 09:04:13.469   \n",
+            "...                       ...   \n",
+            "48406 2019-05-31 20:45:20.381   \n",
+            "48407 2019-06-04 17:24:54.263   \n",
+            "48408 2019-06-05 13:55:46.681   \n",
+            "48409 2019-06-05 13:56:48.722   \n",
+            "48410 2019-06-05 15:47:39.333   \n",
+            "\n",
+            "                                                  prefix  prefix_len  \n",
+            "69399                                           [Task_8]           1  \n",
+            "69400                                   [Task_8, Task_1]           2  \n",
+            "69401                           [Task_8, Task_1, Task_2]           3  \n",
+            "69402                   [Task_8, Task_1, Task_2, Task_3]           4  \n",
+            "69403           [Task_8, Task_1, Task_2, Task_3, Task_4]           5  \n",
+            "...                                                  ...         ...  \n",
+            "48406           [Task_8, Task_1, Task_2, Task_3, Task_4]           5  \n",
+            "48407   [Task_8, Task_1, Task_2, Task_3, Task_4, Task_9]           6  \n",
+            "48408  [Task_8, Task_1, Task_2, Task_3, Task_4, Task_...           7  \n",
+            "48409  [Task_8, Task_1, Task_2, Task_3, Task_4, Task_...           8  \n",
+            "48410  [Task_8, Task_1, Task_2, Task_3, Task_4, Task_...           9  \n",
+            "\n",
+            "[83906 rows x 7 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "hmktWNYZmE4I"
+        "id": "GZXBNcWFnQkA"
       },
       "execution_count": null,
       "outputs": []
